## Process this file with automake to produce Makefile.in
#
# $Id: Makefile.am,v 1.1 1999-02-19 22:35:06 arensb Exp $
#

## XXX - Use shallow directory structure (then again, with all the
## crap that automake and stuff dumps in the top-level directory, deep
## might be better.
## XXX - Strictness: foreign.

SUBDIRS = palm pconn coldsync doc

EXTRA_DIST = \
	.cvsignore \
	AUTHORS \
	Makefile

EXTRA_MOSTLYCLEANFILES = *.bak

## PROGRAMS LIBRARIES HEADERS MANS TEXINFOS
