## Process this file with automake to produce Makefile.in
#
# $Id: Makefile.am,v 1.3 1999-03-28 09:55:41 arensb Exp $
#
# XXX - 'make' complains because automake(?) puts two sets of
# 'version.texi' targets in the Makefile. Probably ought to break
# things up into subdirectories.

info_TEXINFOS = \
	libpalm.texi \
	pdb.texi

EXTRA_DIST = \
	Makefile \
	libpalm.ps \
	pdb.ps
